force-app/main/default/objects/RD_Holder_Component_Part_Number__c/fields/CompPTC__c.field-meta.xml
<CustomField>
    <fullName>CompPTC__c</fullName>
    <label>CompPTC</label>
    <length>20</length>
    <type>Text</type>
</CustomField>