force-app/main/default/objects/RD_Holder_Component_Part_Number__c/fields/CompSZC__c.field-meta.xml
<CustomField>
    <fullName>CompSZC__c</fullName>
    <label>CompSZC</label>
    <length>20</length>
    <type>Text</type>
</CustomField>