force-app/main/default/objects/RD_Holder_Component_Part_Number__c/fields/Connection__c.field-meta.xml
<CustomField>
    <fullName>Connection__c</fullName>
    <label>Connection</label>
    <length>255</length>
    <type>Text</type>
</CustomField>