force-app/main/default/objects/RD_Holder_Component_Part_Number__c/fields/HolderComponentPartNumber__c.field-meta.xml
<CustomField>
    <fullName>HolderComponentPartNumber__c</fullName>
    <label>HolderComponentPartNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>