force-app/main/default/objects/RD_Holder_Component_Part_Number__c/fields/Matl__c.field-meta.xml
<CustomField>
    <fullName>Matl__c</fullName>
    <label>Matl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>