force-app/main/default/objects/RD_Holder_Component_Part_Number__c/fields/PartCode__c.field-meta.xml
<CustomField>
    <fullName>PartCode__c</fullName>
    <label>PartCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>