force-app/main/default/objects/RD_Holder_Component_Part_Number__c/fields/SourceCode__c.field-meta.xml
<CustomField>
    <fullName>SourceCode__c</fullName>
    <label>SourceCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>