force-app/main/default/objects/RD_Holder_Component_Part_Number__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>HolderComponentPartNumber__c</columns>
    <columns>PTC__c</columns>
    <columns>STC__c</columns>
    <columns>SZC__c</columns>
    <columns>Matl__c</columns>
    <columns>DSCVAR__c</columns>
    <columns>HCLASS__c</columns>
    <columns>PartCode__c</columns>
    <columns>Connection__c</columns>
    <columns>SourceCode__c</columns>
    <columns>TestingCode__c</columns>
    <columns>OptionCode__c</columns>
    <columns>Leadtime__c</columns>
    <columns>CompPTC__c</columns>
    <columns>CompSZC__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>